--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,14 @@ dist.jar=${dist.dir}/VeterinaryClinicSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.derbyclient.jar=C:\\Program Files\\Java\\jdk1.8.0_101\\db\\lib\\derbyclient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.JCalendar.classpath}:\
+    ${libs.JTimeChooser.classpath}:\
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
