--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,8 @@ javac.classpath=\
     ${libs.JTimeChooser.classpath}:\
     ${file.reference.derbyclient.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${libs.JasperReports-6.2.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
