--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,9 +4,10 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=This information system is intended for use by veterinary clinics. Features of this system includes but are bnot limited to managing appointments, managing customer and pet details and also service information.
 application.splash=C:\\Users\\lysan\\SkyDrive\\FYP\\VeterinaryClinicSystem\\src\\images\\Splash.gif
-application.title=VeterinaryClinicSystem
-application.vendor=
+application.title=Veterinary Clinic System
+application.vendor=Li San & Priya
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
